Project/GpMessages/6607253216100
<?xml version="1.0" encoding="utf-8"?><messages><msg code="0" type="2">Start Time: Tuesday, 21 January 2025 20:57:36</msg><msg code="539" type="100">ERROR 000539: ﻿  File "&lt;expression&gt;", line 1
    07/03/2015
    ^
﻿SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
</msg><msg code="-2147467259" type="100">Failed to execute (CalculateField).</msg><msg code="0" type="3">Failed at Tuesday, 21 January 2025 20:57:36 (Elapsed Time: 0.05 seconds)</msg></messages>